<resources>
    <string name="app_name">Webcams</string>
    <string name="action_settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="about">About</string>
    <string name="about_text">Mobile app \"Webcams\"</string>
    <string name="about_email" translatable="false">obrekht@gmail.com</string>
    <string name="about_name">Nikita Obrekht</string>
    <string name="error">Error</string>
    <string name="error_description">Unfortunately, an error occurred.\nPlease, try again later or contact us by phone.</string>
    <string name="phone_number" translatable="false">+7 (123) 456-78-90</string>
    <string name="title_webcam">Webcam</string>
    <string name="webcam_not_available">Webcam is not available\n¯\\_(ツ)_/¯</string>
    <string name="title_category">Category</string>
    <string name="category_all">All</string>
    <string name="should_have_permission">You should have location permission</string>
    <string name="cant_retrieve_location">Can\'t retrieve location</string>
    <string name="loading_failed">Loading failed</string>
    <string name="connection_to_google_api_failed">Connection to Google Api failed</string>
    <string name="grant">Grant</string>
</resources>
