<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_about"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="28dp"
    tools:context="com.obrekht.onlinecameras.ui.activity.AboutActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_sky_logo_white"/>

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="28dp"
        android:text="@string/about_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    <LinearLayout
        android:id="@+id/about_email_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_text"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/icon_about_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_public_24dp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/about_email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_email_layout"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/icon_about_name"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_location_24dp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:text="@string/about_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"/>

    </LinearLayout>

</RelativeLayout>
