<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/webcams_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="@dimen/locations_list_padding"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                tools:context="com.obrekht.onlinecameras.ui.activity.WebcamsActivity"
                tools:listitem="@layout/item_webcam"/>

            <RelativeLayout
                android:id="@+id/error_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:adjustViewBounds="true"
                    app:tint="@color/grey_dark2"
                    app:srcCompat="@drawable/ic_sky_error_bg"/>

                <TextView
                    android:id="@+id/text_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/text_error_description"
                    android:layout_centerHorizontal="true"
                    android:text="@string/error"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>

                <TextView
                    android:id="@+id/text_error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/phone_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/error_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/phone_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimary"/>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</merge>
